@@ -531,6 +531,7 @@
       \item \code{pdf()} and \code{postscript()} support for the documented
       Adobe encodings \code{"Greek"} and \code{"Cyrilllic"} was missing
       (although the corresponding Windows' codepages could be used).
+      (And also for the legacy \code{"MacRoman"} encoding.) 
 
       \item Computations of glyph metric informaation for \code{pdf()}
       and \code{postscript()} did not take into account that
